==> seatrix/BC-8/MMC.c <==
#include "msp430x54x.h"
#include <string.h>
#include "common.h"
#include "MMC.h"
#include "RTC.h"
#define CMD0	(0x40+0)	/* GO_IDLE_STATE */
#define CMD1	(0x40+1)	/* SEND_OP_COND */
#define CMD8	(0x40+8)	/* SEND_IF_COND */
#define CMD9	(0x40+9)	/* SEND_CSD */
#define CMD10	(0x40+10)	/* SEND_CID */
#define CMD12	(0x40+12)	/* STOP_TRANSMISSION */
#define CMD16	(0x40+16)	/* SET_BLOCKLEN */
#define CMD17	(0x40+17)	/* READ_SINGLE_BLOCK */
#define CMD18	(0x40+18)	/* READ_MULTIPLE_BLOCK */
#define CMD23	(0x40+23)	/* SET_BLOCK_COUNT */
#define CMD24	(0x40+24)	/* WRITE_BLOCK */
#define CMD25	(0x40+25)	/* WRITE_MULTIPLE_BLOCK */
#define CMD41	(0x40+41)	/* SEND_OP_COND (ACMD) */
#define CMD55	(0x40+55)	/* APP_CMD */
#define CMD58	(0x40+58)	/* READ_OCR */
#define SELECT()    P9OUT &= ~BIT6  // Card Select
#define DESELECT()  P9OUT |= BIT6   // Card Deselect
#define SOCKWP		BIT5			/* Write protect switch (PB5) */
#define SOCKINS		BIT7			/* Card detect switch (PB4) */

static unsigned char xmit_spi (BYTE data)
{
    while ((UCB2IFG&UCTXIFG)==0);    // wait while not ready / for RX
    UCB2TXBUF = data;                // write
    while ((UCB2IFG&UCRXIFG)==0);    // wait for RX buffer (full)
    return (UCB2RXBUF);
}

static BYTE rcvr_spi (void)
{
    while ((UCB2IFG&UCTXIFG)==0); // wait while not ready / for RX
    UCB2TXBUF = 0xFF;        // write a dummy byte
    while ((UCB2IFG&UCRXIFG)==0); // wait for RX buffer (full)
    return (UCB2RXBUF);
}

DSTATUS disk_initialize (
	BYTE drv		/* Physical drive nmuber (0) */
)
{
	BYTE n, ty, ocr[4];

    MMC_init ();
	
    if (drv) return STA_NOINIT;			/* Supports only single drive */
	if (Stat & STA_NODISK) return Stat;	/* No card in the socket */

#if 0
    if (MMC_cardPresent ())
    {        
      sprintf(message2send, "Card present!\n");
      PrtStr2Teminal(message2send,'A');
    }
    else
    {
      sprintf(message2send, "NO card!\n");
      PrtStr2Teminal(message2send,'A');
    }
#endif
	for (n = 10; n; n--) rcvr_spi();	/* 80 dummy clocks */

	SELECT();				/* CS = L */
	ty = 0;
	if (send_cmd(CMD0, 0) == 1) {			/* Enter Idle state */
		Timer1 = 100;						/* Initialization timeout of 1000 msec */
		if (send_cmd(CMD8, 0x1AA) == 1) {	/* SDC Ver2+  */
            //LCD_printf ("SDC Ver2+\n");
			for (n = 0; n < 4; n++) ocr[n] = rcvr_spi();
			if (ocr[2] == 0x01 && ocr[3] == 0xAA) {	/* The card can work at vdd range of 2.7-3.6V */
				do {
					if (send_cmd(CMD55, 0) <= 1 && send_cmd(CMD41, 1UL << 30) == 0) break; /* ACMD41 with HCS bit */
				} while (Timer1);
				if (Timer1 && send_cmd(CMD58, 0) == 0) {	/* Check CCS bit */
					for (n = 0; n < 4; n++) ocr[n] = rcvr_spi();
					ty = (ocr[0] & 0x40) ? 6 : 2;
				}
			}
		} else {							/* SDC Ver1 or MMC */
            //LCD_printf ("SDC Ver1 or MMC\n");
			ty = (send_cmd(CMD55, 0) <= 1 && send_cmd(CMD41, 0) <= 1) ? 2 : 1;	/* SDC : MMC */
			do {
				if (ty == 2) {
					if (send_cmd(CMD55, 0) <= 1 && send_cmd(CMD41, 0) == 0) break;	/* ACMD41 */
				} else {
					if (send_cmd(CMD1, 0) == 0) break;								/* CMD1 */
				}
			} while (Timer1);
			if (!Timer1 || send_cmd(CMD16, 512) != 0)	/* Select R/W block length */
				ty = 0;
		}
	}
	CardType = ty;
	DESELECT();			/* CS = H */
	rcvr_spi();			/* Idle (Release DO) */

	if (ty) {			/* Initialization succeded */
		Stat &= ~STA_NOINIT;		/* Clear STA_NOINIT */
	} else {			/* Initialization failed */
		//power_off();
	}

	return Stat;
}
